【fix】串口连接优化